# PicoCartridge

./: .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt
pcb/PicoCartridge/: PicoCartridge.kicad_pcb  PicoCartridge.kicad_prl  PicoCartridge.kicad_pro  PicoCartridge.kicad_sch  fp-lib-table  gba_bus.kicad_sch  mcu.kicad_sch  memory.kicad_sch  psu.kicad_sch  sym-lib-table  usb.kicad_sch
pcb/PicoCartridge/lib/: PicoCartridge.kicad_sym
pcb/PicoCartridge/lib/PicoCartridge.pretty/: ProgrammerConnector.kicad_mod  ProgrammerConnector_SMD.kicad_mod
